--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,13 +22,15 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
+
+    compile 'com.android.support:appcompat-v7:24.0.0-alpha2'
     compile 'org.jsoup:jsoup:1.9.1'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:cardview-v7:23.4.0'
+    compile 'com.android.support:design:24.0.0-alpha2'
+    compile 'com.android.support:cardview-v7:24.0.0-alpha2'
     compile 'com.github.bumptech.glide:glide:3.6.0'
     compile 'com.google.android.libraries.mediaframework:mediaframework:0.2.1'
     compile 'com.google.android.gms:play-services-ads:8.4.0'
     compile 'com.google.ads.interactivemedia.v3:interactivemedia:3.2.1'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
 
 }
